[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Ahmed Ibrahim <ib153507@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
fixedbitset = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
